--- a/tuhoc.html
+++ b/tuhoc.html
@@ -6,6 +6,7 @@
     <title>Hyper Text</title>
   </head>
   <body></body>
+  <h1>Tiêu đề</h1>
     <img src="img/picture1.jpg" alt="Hình ảnh" />
     <p>Đường dẫn tương đối</p>
     <img src="./boy.jpg" alt="boy"><br>
